@@ -35,6 +35,7 @@ Version 6.4.16
   - Bugfix in CWString::Shr: Zeichen am Ende des Strings wurden nicht abge-
     schnitten, String konnte länger werden, als der Originalstring
   - CWString: Operator bool() entfernt, da dieser nicht funktioniert
+  - CString: Zusätzliche Set- und SetChar-Funktionen 
     
   Achtung: Mögliches Kompatibilitätsproblem:
   - Änderung in CWString::Set: Bei Verwendung eines char *, std::string oder
